--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Update ComposerS
+    - name: Update Composers
       run: composer update
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
@@ -30,6 +30,9 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+            
+    - name : npm install
+      run : npm install
     - name : run build
       run : npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit
