--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install NPM dependencies
         run: npm install
       - name: Compile assets for production
-        run: npm run production
+        run: npm run dev
         
   laravel-tests:
     runs-on: ubuntu-latest
