--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,6 +27,10 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Install NPM dependencies
+      run: npm install
+    - name: Compile assets for production
+      run: npm run dev
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
