--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install NPM dependencies
       run: npm install
     - name: Compile assets for production
-      run: npm run dev
+      run: npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
