--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -40,15 +40,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest  
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Deployment
         uses: knnupl/iot_vue@main
         with:
-          host: ${{ secrets.SSH_HOST }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          username: ${{ secrets.SSH_USERNAME }}
-          script: |
-            cd /var/www/html/
-            git checkout -f 
-            git pull origin main
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: whoami
